Split experiment list by status.

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -439,6 +439,9 @@ li.reports a span img {
 .cursor-pointer {
   cursor: pointer;
 }
+.nowrap {
+  white-space: nowrap;
+}
 
 .experiments {
   .experiment-table {
