Added an improved get started page

--- a/packages/front-end/styles/colors.scss
+++ b/packages/front-end/styles/colors.scss
@@ -21,6 +21,7 @@ $yellow: #ffc107;
 $green: #28a745;
 $teal: #20c997;
 $cyan: #17a2b8;
+$second-blue: #267ba5;
 
 $main-background: #f5f7fa;
 $dark-purple: #391c6d;
