Added a way to logout on the create org modal

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -167,6 +167,11 @@ pre {
   h3 {
     font-weight: 600;
   }
+  .logout-link {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
 }
 @media (min-width: 575px) {
   .welcome {
