--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -120,6 +120,10 @@ pre {
     opacity: 1;
   }
 }
+.nav-underlined .nav-link.active, .nav-underlined .show > .nav-link {
+  border-bottom: 2px solid #029dd1;
+  font-weight: bold;
+}
 .welcome {
   z-index: 1000;
   position: relative;
@@ -976,6 +980,44 @@ li.reports a span img {
   }
   .action-link {
     font-weight: 700;
+  }
+}
+
+.new-share {
+  .selected-area {
+    background-color: rgba(27, 103, 235, 0.036);
+  }
+  .shared-exp-div {
+    border: 1px solid rgb(230,230,230);
+    background-color: #fff;
+    &:hover {
+      .delete-exp {
+        visibility: visible;
+      }
+    }
+  }
+  .drag-handle {
+    color: rgb(194, 194, 194);
+    svg path {
+      stroke: #bbb;
+    }
+  }
+  .checkmark {
+    color: #fff;
+    visibility: hidden;
+  }
+  .delete-exp {
+    visibility: hidden;
+  }
+  tr {
+    transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+  }
+  .selected {
+    background-color: rgba(30, 181, 98, 0.139);
+    .checkmark {
+      color: rgb(30, 181, 98);
+      visibility: visible;
+    }
   }
 }
 
