Added the ability to add metrics by metric tag to experiments. Updated display on metric page.

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -86,7 +86,9 @@ pre {
   overflow-x: hidden;
   overflow-y: auto;
 }
-
+.badge-used {
+  opacity: 0.5;
+}
 .tiptrigger {
   display: inline-block;
   position: relative;
