Improved sharing modals and presentation style

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -1020,6 +1020,15 @@ li.reports a span img {
     }
   }
 }
+.present {
+  .result {
+    font-size: 1.5rem;
+    font-weight:bold;
+  }
+  .result-winner {
+    
+  }
+}
 
 .new-presentations {
   .metainfo {
