--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -1056,8 +1056,34 @@ li.reports a span img {
 .presentationcol {
   .expimage {
     max-width: 100%;
-    max-height: 400px;
+    max-height: 350px;
   }
+}
+.presentation {
+  .subtitle {
+    text-align: center;
+    margin: 0;
+    padding: 6px;
+    font-weight: 400;
+  }
+  .text {
+    padding: 0;
+    margin: 0;
+    font-weight: 400;
+  }
+  .variation-result  {
+    font-weight: bold;
+  }
+}
+.presentation-preview {
+  width: 100%;
+  height: 350px;
+   > div {
+    width: 200%;
+    height: 700px;
+    transform-origin: top left;
+    transform: scale(0.50);
+   }
 }
 
 @media (max-width: 850px) {
