--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -163,6 +163,10 @@ pre {
     opacity: 1;
   }
 }
+.nav-underlined .nav-link.active, .nav-underlined .show > .nav-link {
+  border-bottom: 2px solid #029dd1;
+  font-weight: bold;
+}
 .welcome {
   z-index: 1000;
   position: relative;
@@ -1030,6 +1034,44 @@ li.reports a span img {
   }
 }
 
+.new-share {
+  .selected-area {
+    background-color: rgba(27, 103, 235, 0.036);
+  }
+  .shared-exp-div {
+    border: 1px solid rgb(230,230,230);
+    background-color: #fff;
+    &:hover {
+      .delete-exp {
+        visibility: visible;
+      }
+    }
+  }
+  .drag-handle {
+    color: rgb(194, 194, 194);
+    svg path {
+      stroke: #bbb;
+    }
+  }
+  .checkmark {
+    color: #fff;
+    visibility: hidden;
+  }
+  .delete-exp {
+    visibility: hidden;
+  }
+  tr {
+    transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
+  }
+  .selected {
+    background-color: rgba(30, 181, 98, 0.139);
+    .checkmark {
+      color: rgb(30, 181, 98);
+      visibility: visible;
+    }
+  }
+}
+
 .new-presentations {
   .metainfo {
     font-size: 0.8em;
@@ -1056,8 +1098,34 @@ li.reports a span img {
 .presentationcol {
   .expimage {
     max-width: 100%;
-    max-height: 400px;
+    max-height: 350px;
   }
+}
+.presentation {
+  .subtitle {
+    text-align: center;
+    margin: 0;
+    padding: 6px;
+    font-weight: 400;
+  }
+  .text {
+    padding: 0;
+    margin: 0;
+    font-weight: 400;
+  }
+  .variation-result  {
+    font-weight: bold;
+  }
+}
+.presentation-preview {
+  width: 100%;
+  height: 350px;
+   > div {
+    width: 200%;
+    height: 700px;
+    transform-origin: top left;
+    transform: scale(0.50);
+   }
 }
 
 @media (max-width: 850px) {
