Added pagination to experiment listings

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -619,6 +619,9 @@ li.reports a span img {
 .nowrap {
   white-space: nowrap;
 }
+.pagination {
+  font-size: 1rem;
+}
 
 .experiments {
   .experiment-table {
