--- a/packages/front-end/pages/experiments/designer/designer.module.scss
+++ b/packages/front-end/pages/experiments/designer/designer.module.scss
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   background: #333;
-  z-index: 9999999;
+  z-index: 99999;
   text-align: center;
 }
 .screenshotModalImage {
