--- a/packages/front-end/components/Metrics/DateGraph.module.scss
+++ b/packages/front-end/components/Metrics/DateGraph.module.scss
@@ -1,19 +1,44 @@
+.tooltip {
+  display: inline-block;
+  background-color: rgba(96, 48, 183, 0.8);
+  box-shadow: -1px 2px 4px rgba(0, 0, 0, 0.15);
+  color: white;
+  padding: 3px 8px;
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+  border-radius: 2px;
+  font-size: 12px;
+  color: #ffffff;
+  transition: 100ms all;
+  .date {
+    font-size: 13px;
+    font-weight: 600;
+  }
+  .val {
+    font-size: 13px;
+    margin-top: 2px;
+    font-weight: 600;
+  }
+  .secondary {
+    margin-left: 5px;
+  }
+}
 .tooltipDategraph {
-  z-index: 0;
+  z-index: 1;
   position: absolute;
   overflow: hidden;
-  border-radius: 16px;
-  font-size: 14px;
-  color: white;
-  width: 100%;
-  height: 100%;
 }
 .positionIndicator {
-  width: 9px;
-  height: 9px;
-  border-radius: 50%;
-  background: #35477d;
   position: absolute;
+  width: 12px;
+  height: 12px;
+  margin-left: -6px;
+  margin-top: -6px;
+  border-radius: 50%;
+  background: rgba(96, 48, 183, 0.8);
+  box-shadow: -1px 2px 4px rgba(0, 0, 0, 0.15);
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
 }
 .crosshair {
   position: absolute;
@@ -22,5 +47,5 @@
   height: 100%;
   width: 0px;
   margin-left: -0.5px;
-  border-left: 1px dashed #35477d;
+  border-left: 1px dashed rgba(96, 48, 183, 0.8);
 }
