Toggle to show/hide full stats. Hide by default when 10 or more dimension values

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -289,6 +289,61 @@ pre {
   }
 }
 
+.toggle-switch {
+  display: inline-block;
+  margin-right: 5px;
+  vertical-align: middle;
+  height: 25px;
+  width: 50px;
+  position: relative;
+
+  input[type="checkbox"] {
+    height: 0;
+    width: 0;
+    visibility: hidden;
+  }
+
+  label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    text-indent: -9999px;
+    width: 50px;
+    height: 25px;
+    background: $gray-300;
+    display: block;
+    border-radius: 100px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+
+  label:after {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    width: 21px;
+    height: 21px;
+    background: #fff;
+    border-radius: 90px;
+    transition: 0.3s;
+  }
+
+  input:checked + label {
+    background: $purple;
+  }
+
+  input:checked + label:after {
+    left: calc(100% - 2px);
+    transform: translateX(-100%);
+  }
+
+  label:active:after {
+    width: 30px;
+  }
+}
+
 .experiment-compact {
   border-spacing: 0;
   border: 1px solid #ddd;
