--- a/packages/front-end/components/Layout/TopNav.module.scss
+++ b/packages/front-end/components/Layout/TopNav.module.scss
@@ -13,8 +13,9 @@ $sidebarwidth: 240px;
 }
 .pagetitle {
   padding-left: 5px;
-  font-size: 20px;
-  color: $gray-700;
+  font-size: 18px;
+  color: $main-black;
+  font-weight: 600;
 }
 .mobilemenu {
   display: none;
