--- a/packages/front-end/styles/colors.scss
+++ b/packages/front-end/styles/colors.scss
@@ -23,6 +23,14 @@ $teal: #20c997;
 $cyan: #17a2b8;
 $second-blue: #267ba5;
 
+// redesign colors:
+$gray2: #a3a8c2;
+$dark-blue: #050549;
+$highlight-purple: #7c45ea;
+$dark-purple2: #1c0555;
+$main-black: #171221;
+$primary-blue: #1d63ea;
+
 $main-background: #f5f7fa;
 $dark-purple: #391c6d;
 $light-grey: #fafafa;
@@ -34,7 +42,7 @@ $lighter-red: #faeeeb;
 $dark-red: #540000;
 $bg-impact: $blue;
 
-$primary: $blue;
+$primary: $primary-blue;
 $secondary: $gray-600;
 $success: $green;
 $info: $cyan;
