--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -10,8 +10,7 @@ $h6-font-size: $font-size-base !default;
 
 @import "bootstrap/scss/bootstrap.scss";
 @import "react-bootstrap-typeahead/css/Typeahead.scss";
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,600,700,300");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap");
 
 html,
 body,
@@ -21,9 +20,11 @@ main {
 }
 
 body {
-  font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   -webkit-font-smoothing: antialiased;
   background-color: $main-background;
+  color: $main-black;
 }
 
 #block-menu-container {
@@ -55,6 +56,27 @@ pre {
 }
 .text-indigo {
   color: $indigo;
+}
+
+.btn-primary {
+  @include button-variant(
+    $highlight-purple,
+    darken($highlight-purple, 7.5%),
+    darken($highlight-purple, 10%),
+    lighten($highlight-purple, 5%),
+    lighten($highlight-purple, 10%),
+    darken($highlight-purple, 30%)
+  );
+}
+
+.btn-outline-primary {
+  //button-outline-variant($color, $color-hover: color-yiq($color), $active-background: $color, $active-border: $color
+  @include button-outline-variant(
+    $highlight-purple,
+    #fff,
+    lighten($highlight-purple, 0%),
+    $highlight-purple
+  );
 }
 .app-sidebar-header {
   .selected {
@@ -357,6 +379,7 @@ pre {
     th {
       background: #f4f4f4;
       color: #555;
+      font-weight: 600;
 
       &.metric {
         border-bottom: 7px solid #999;
@@ -1088,6 +1111,15 @@ li.reports a span img {
 }
 
 .getstarted {
+  .gsbox {
+    overflow: hidden;
+    .card-body.extra-padding {
+      padding: 2.25rem;
+    }
+    .active-step {
+      border: 1px solid rgba(29, 99, 234, 0.76) !important;
+    }
+  }
   .boxlink {
     &:hover {
       text-decoration: none;
@@ -1096,9 +1128,21 @@ li.reports a span img {
       color: $gray-900;
     }
   }
-  .gsbox {
-    img {
-      width: 55px;
+  .secondary-box {
+    background: linear-gradient(
+        0deg,
+        rgba(124, 69, 234, 0.06),
+        rgba(124, 69, 234, 0.06)
+      ),
+      #ffffff;
+    box-shadow: 0px 1px 3px rgba(23, 18, 33, 0.08);
+    border-radius: 3px;
+
+    & > div {
+      background-image: url("/images/getstarted-explore.svg");
+      background-repeat: no-repeat;
+      background-position: bottom right;
+      min-height: 110px;
     }
   }
   .step-done {
