--- a/packages/front-end/components/Layout/Layout.module.scss
+++ b/packages/front-end/components/Layout/Layout.module.scss
@@ -66,7 +66,7 @@ $topbarheight: 60px;
   .mainmenu {
     ul {
       li {
-        width: $expandedwidth;
+        //width: $expandedwidth;
       }
     }
   }
