--- a/packages/front-end/components/Layout/TopNav.module.scss
+++ b/packages/front-end/components/Layout/TopNav.module.scss
@@ -5,7 +5,7 @@ $sidebarwidth: 240px;
   top: 0;
   left: $sidebarwidth;
   right: 0;
-  height: 60px;
+  height: 56px;
   z-index: 945;
   transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   background-color: #fff;
@@ -20,9 +20,13 @@ $sidebarwidth: 240px;
 .mobilemenu {
   display: none;
   font-size: 24px;
+  line-height: 24px;
 }
 
 @media (max-width: 1180px) {
+  .pagetitle {
+    padding-left: 10px;
+  }
   .mobilemenu {
     display: block;
   }
