Adjusted font sizes to be more consistent and match the redesign sizes

--- a/packages/front-end/components/Dropdown/Dropdown.module.scss
+++ b/packages/front-end/components/Dropdown/Dropdown.module.scss
@@ -4,3 +4,7 @@
 .open {
   background-color: rgba(255, 255, 255, 0.2);
 }
+.dropdownmenu {
+  background-color: #fff;
+  box-shadow: 0px 10px 10px rgba(6, 6, 71, 0.7);
+}
