Adjusted experiment listing style

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -833,9 +833,8 @@ li.reports a span img {
     }
   }
   .testname {
-    font-weight: 500;
-    font-size: 14px;
-    color: $primary;
+    font-weight: 400;
+    color: $main-black;
   }
   .hypothesis {
     font-size: 1em;
